--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button type="button">Замовити послугу</button>
         </div>
       </section>
-      <section class="benefits-activity section">
+      <section class="benefits section-smal">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="benefits-list list">
@@ -68,7 +68,10 @@
               <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
           </ul>
-
+        </div>
+      </section>
+      <section class="activity section">
+        <div class="container">
           <h2>Чим ми займаємося</h2>
           <ul class="list activity-conteiner">
             <li class="item"><img src="./images/web.jpg" alt="розробка сайтів" width="370" /></li>
